# claude-hack-2603

./: .gitignore  .mcp.json  .playwright.json  .pre-commit-config.yaml  .tool-versions  README.md  REVIEW.md  index.html  package-lock.json  package.json  pyproject.toml  skillfish.json
.claude/: settings.local.json
.claude/skills/agent-development/: .skillfish.json
.claude/skills/hook-development/: .skillfish.json
.claude/skills/skill-development/: .skillfish.json
.github/: copilot-instructions.md
.github/skills/make-skill/: SKILL.md
.github/skills/skill-writer/: .skillfish.json
docs/: best-practices.html  best-practices.md  claude-code-best-practices.md  slides.html
src/: main.py
